fix rock paper scissor text on mobile

--- a/react-app/src/components/pages/Games/Games.css
+++ b/react-app/src/components/pages/Games/Games.css
@@ -4,6 +4,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    /* background-attachment: fixed; */
       /* Set rules to fill background */
     min-height: 100%;
     width: 100vw;
@@ -13,7 +14,7 @@
   height: auto;
 	
   /* Set up positioning */
-  /* position: fixed; */
+  position: fixed;
   top: 0;
   left: 0; 
 }
